crates/reinhardt-core/macros/tests/ui/model_enum/fail/duplicate_value.rs
use reinhardt_macros::ModelEnum;

#[derive(ModelEnum)]
#[model_enum(repr = "string")]
enum DuplicateStatus {
	#[model_enum(value = "queued")]
	First,
	#[model_enum(value = "queued")]
	Second,
}

fn main() {}
